# simplicity-attestation

./: .gitignore  BLOCKSTREAM_REPORT.md  CONTRIBUTING.md  DOCUMENTACAO.md  LICENSE  README.md  example.py  pyproject.toml  pytest.ini  rename_sas_to_sas.py  secrets.json  secrets_new.json
contracts/: certificate.simf  certificate.simf.backup  vault.simf  vault.simf.backup
docs/: DOCUMENTACAO.md  DOCUMENTATION.md  PROTOCOL_SPEC.md  SIGNATURE_OFFLINE.md
docs/pt/: DOCUMENTACAO.md  PROTOCOL_SPEC.md  README.md  SDK.md
examples/: api_reference.py
sdk/: README.md  __init__.py  client.py  config.py  confirmation.py  constants.py  errors.py  events.py  fees.py  logging.py  models.py  prepared.py  providers.py  roles.py  sap.py  sas.py  tools.py  vault.py
sdk/core/: __init__.py  contracts.py  transaction.py  witness.py
sdk/infra/: __init__.py  api.py  hal.py  keys.py
sdk/protocols/: __init__.py  sap.py  sas.py
tests/: conftest.py  test_attack_vectors.py  test_certificate_revoke.py  test_edge_cases.py  test_emit.py
tests/unit/: __init__.py  test_attack_vectors.py  test_client.py  test_keys.py  test_models.py  test_protocol.py  test_security.py  test_validation.py  test_witness.py
v2/: PROTOCOL_SPEC.md  README.md  SIMPLICITY_FLOW_GUIDE.md  SIMPLICITY_TOOLING_ISSUES.md  admin_p2pk_final.simf  certificate_v2.simf  complete_op_return.sh  delegation_vault_v1.simf  secrets.json  test_vault_admin_spend.sh  test_vault_delegate_spend.py  test_vault_v2_emit.py  vault_v2.simf  vault_v3.simf
v2/archive/: TESTNET_KEYS.md
v2/archive/compilation_artifacts/: admin_spend.wit  (+5 more)
(+35 files in other folders)
