[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplicity-attestation-sdk"
version = "0.1.0"
description = "Simplicity Attestation System SDK"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["sdk*"]
